--- a/Final_Project_Report.ipynb
+++ b/Final_Project_Report.ipynb
@@ -12,7 +12,7 @@
     "* Date: 2 May 2023\n",
     "* Student Name: Brett Genz\n",
     "* Student Net ID: pah4rw\n",
-    "* This URL: <a URL to the notebook source of this document>\n",
+    "* This URL: https://github.com/brettgenz/montecarlo/blob/b051726b393c3a0c1742cfd18c40cc43397e00dc/Final_Project_Report.ipynb\n",
     "* GitHub Repo URL: https://github.com/brettgenz/montecarlo"
    ]
   },
